# practical_c_programming

./: .gitignore  CMakeLists.txt
algorithms/recursion/: factorial  factorial.c
codeup/1070_1099/: 1071.c  1072.c
data_structure/array_list/: array_list.c  array_list.h  main.c
data_structure/circular_list/: circular_list.c  circular_list.h
lesson/lesson1/: Makefile  main.c  person.c  person.h  student.c
lesson/lesson2/: README.md  lesson2.c  linked-list  linked-list.c
lesson/lesson3/: Makefile  main.c
lesson/lesson3/include/: address.h  menu.h
lesson/lesson3/src/: address.c  menu.c
python-list/: .callback.c.un~  .main.c.un~  callback  callback.c  callback.c~  main  main.c  main.c~
system/ipc/socket/: README.md  hello_server.c
unix/basic/: ls.c
